--- a/html/caption.html
+++ b/html/caption.html
@@ -12,7 +12,7 @@
   <p>caption 标签必须紧随 table 标签之后。您只能对每个表格定义一个标题。通常这个标题会被居中于表格之上</p>
   <p><strong>属性：</strong></p>
   <P>align 值：left top right bottom 规定标题的对齐方式</P>
-  <table>
+  <table border="2">
     <caption>Monthly savings</caption>
     <tr>
       <th>Month</th>
